--- a/contao/templates/ce_metamodel_frontend_edit.xhtml
+++ b/contao/templates/ce_metamodel_frontend_edit.xhtml
@@ -1,10 +1,5 @@
-<!-- indexer::stop -->
-<div class="<?php echo $this->class; ?> block"<?php echo $this->cssID; ?><?php if ($this->style): ?> style="<?php echo $this->style; ?>"<?php endif; ?>>
-<?php if ($this->headline): ?>
-<<?php echo $this->hl; ?>><?php echo $this->headline; ?></<?php echo $this->hl; ?>>
-<?php endif; ?>
+<?php $this->extend('block_unsearchable'); ?>
 
-<?php echo $this->editor; ?>
-
-</div>
-<!-- indexer::continue -->
+<?php $this->block('content'); ?>
+<?= $this->editor ?>
+<?php $this->endblock(); ?>
